--- a/.github/workflows/build-iso.yml
+++ b/.github/workflows/build-iso.yml
@@ -111,7 +111,7 @@ jobs:
         echo "MD5: $(cat $ISO_NAME.md5)"
 
     - name: Upload ISO artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: hyprland-minimal-iso
         path: |
@@ -123,12 +123,11 @@ jobs:
     - name: Create Release
       if: github.event.inputs.release == 'true' && github.ref == 'refs/heads/main'
       id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v2
       with:
+        token: ${{ secrets.GITHUB_TOKEN }}
         tag_name: iso-${{ github.run_number }}
-        release_name: Hyprland Minimal ISO Build ${{ github.run_number }}
+        name: Hyprland Minimal ISO Build ${{ github.run_number }}
         body: |
           ## Hyprland Minimal ISO
 
@@ -153,36 +152,7 @@ jobs:
 
         draft: false
         prerelease: false
-
-    - name: Upload Release Assets
-      if: github.event.inputs.release == 'true' && github.ref == 'refs/heads/main'
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ${{ steps.iso_info.outputs.iso_file }}
-        asset_name: ${{ steps.iso_info.outputs.iso_name }}
-        asset_content_type: application/x-iso9660-image
-
-    - name: Upload SHA256 Checksum
-      if: github.event.inputs.release == 'true' && github.ref == 'refs/heads/main'
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: out/${{ steps.iso_info.outputs.iso_name }}.sha256
-        asset_name: ${{ steps.iso_info.outputs.iso_name }}.sha256
-        asset_content_type: text/plain
-
-    - name: Upload MD5 Checksum
-      if: github.event.inputs.release == 'true' && github.ref == 'refs/heads/main'
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: out/${{ steps.iso_info.outputs.iso_name }}.md5
-        asset_name: ${{ steps.iso_info.outputs.iso_name }}.md5
-        asset_content_type: text/plain
+        files: |
+          out/*.iso
+          out/*.sha256
+          out/*.md5
