Fix: Switch to GRUB bootloader for ISO
- Use GRUB instead of systemd-boot for consistency
- Update GRUB configuration with correct archiso variables
- Remove systemd-boot configuration files
- Add memtest86+ packages for boot menu
- Matches the GRUB bootloader used in the installed system

--- a/archiso/grub/grub.cfg
+++ b/archiso/grub/grub.cfg
@@ -26,23 +26,23 @@ set menu_color_highlight=white/blue
 # Main menu entry
 menuentry "Hyprland Minimal Installer" {
     set gfxpayload=keep
-    search --no-floppy --set=root --label HYPR_%YYYY%%MM%
-    linux /arch/boot/x86_64/vmlinuz-linux archisobasedir=arch archisodevice=UUID=${ARCHISO_UUID}
-    initrd /arch/boot/x86_64/initramfs-linux.img
+    search --no-floppy --set=root --label %ARCHISO_LABEL%
+    linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID%
+    initrd /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 }
 
 menuentry "Hyprland Minimal Installer (Copy to RAM)" {
     set gfxpayload=keep
-    search --no-floppy --set=root --label HYPR_%YYYY%%MM%
-    linux /arch/boot/x86_64/vmlinuz-linux archisobasedir=arch archisodevice=UUID=${ARCHISO_UUID} copytoram
-    initrd /arch/boot/x86_64/initramfs-linux.img
+    search --no-floppy --set=root --label %ARCHISO_LABEL%
+    linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% copytoram
+    initrd /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 }
 
 menuentry "Hyprland Minimal Installer (nomodeset)" {
     set gfxpayload=keep
-    search --no-floppy --set=root --label HYPR_%YYYY%%MM%
-    linux /arch/boot/x86_64/vmlinuz-linux archisobasedir=arch archisodevice=UUID=${ARCHISO_UUID} nomodeset
-    initrd /arch/boot/x86_64/initramfs-linux.img
+    search --no-floppy --set=root --label %ARCHISO_LABEL%
+    linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% nomodeset
+    initrd /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 }
 
 if [ "${grub_platform}" == "efi" ]; then
