Fix: Update to non-deprecated GRUB boot mode and install dependencies
- Change bootmodes to 'uefi.grub' (non-deprecated)
- Install grub package in GitHub Actions workflow
- Add edk2-shell package for UEFI shell support

--- a/.github/workflows/build-iso.yml
+++ b/.github/workflows/build-iso.yml
@@ -35,7 +35,7 @@ jobs:
         pacman-key --init
         pacman-key --populate archlinux
         pacman -Syu --noconfirm
-        pacman -S --noconfirm archiso git sudo
+        pacman -S --noconfirm archiso git sudo grub
 
     - name: Prepare build environment
       run: |
