Add explicit package database sync before validation
- Ensures package databases are fully synchronized
- Makes validation more reliable
- Adds clear message about sync step

--- a/.github/workflows/build-iso.yml
+++ b/.github/workflows/build-iso.yml
@@ -39,6 +39,9 @@ jobs:
 
     - name: Validate package list
       run: |
+        echo "Ensuring package databases are synchronized..."
+        pacman -Sy
+        echo ""
         echo "Validating packages in archiso/packages.x86_64..."
         INVALID_PACKAGES=""
         while IFS= read -r package; do
