Simplify packages and use JetBrains Mono Nerd Font
- Change rofi-lbonn-wayland to standard rofi package
- Replace all fonts with single ttf-jetbrains-mono-nerd
- Update all config files to use JetBrainsMono Nerd Font
- Nerd Font includes icons, removing need for Font Awesome

--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -1,7 +1,7 @@
 # Ghostty Terminal Configuration
 
 # Font settings
-font-family = "JetBrains Mono"
+font-family = "JetBrainsMono Nerd Font"
 font-size = 12
 font-feature = ss01
 font-feature = ss02
