--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -7,6 +7,7 @@ monitor=,preferred,auto,1
 # Execute on startup
 exec-once = waybar
 exec-once = mako
+exec-once = swaybg -i ~/Pictures/wallpaper.jpg -m fill
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 # Environment variables
