Add --disable-download-timeout to GitHub Actions workflow
- Prevents timeout failures on slow package downloads
- Matches local Docker build behavior

--- a/.github/workflows/build-iso.yml
+++ b/.github/workflows/build-iso.yml
@@ -39,8 +39,8 @@ jobs:
       run: |
         pacman-key --init
         pacman-key --populate archlinux
-        pacman -Syu --noconfirm
-        pacman -S --noconfirm archiso git sudo grub
+        pacman -Syu --noconfirm --disable-download-timeout
+        pacman -S --noconfirm --disable-download-timeout archiso git sudo grub
 
     - name: Validate package list
       run: |
