Updated walker packages menu to use the direct provider instead of provider sets (fixed bug not allowing toggle of installed packages).

--- a/dot_config/elephant/menus/main.toml
+++ b/dot_config/elephant/menus/main.toml
@@ -12,7 +12,7 @@ actions = { "open" = "walker -s apps -H" }
 text = "2. Packages"
 keywords = ["install", "aur", "pacman", "yay"]
 icon = "system-software-install"
-actions = { "open" = "walker -s packages -H" }
+actions = { "open" = "walker -m archlinuxpkgs -H" }
 
 [[entries]]
 text = "3. Files"
