Update wifi button to use impala with iwd

--- a/dot_config/swaync/config.json
+++ b/dot_config/swaync/config.json
@@ -92,7 +92,7 @@
         },
         {
           "label": "󰖩",
-          "command": "nm-connection-editor"
+          "command": "ghostty -e impala"
         },
         {
           "label": "󰂯",
