Add violet-lake theme, async theme-switch, and walker theme menu
- Add violet-lake theme with wallpaper
- Make theme-switch async for faster reloads
- Add walker theme switcher menu with wallpaper previews
- Block theme switching when GTK apps are running
- Update btop theme to use transparent background
- Remove unused wallpapers

--- a/dot_config/elephant/menus/main.toml
+++ b/dot_config/elephant/menus/main.toml
@@ -43,3 +43,9 @@ text = "7. Calculator"
 keywords = ["math", "calc", "convert"]
 icon = "accessories-calculator"
 actions = { "open" = "walker -s calc -H" }
+
+[[entries]]
+text = "8. Themes"
+keywords = ["theme", "switch", "wallpaper", "rice", "colors"]
+icon = "preferences-desktop-theme"
+actions = { "open" = "walker -s themes -H" }
