Add hyprlock and SDDM themes, waybar network click
- Add themed hyprlock config with blurred wallpaper background
- Add minimal SDDM login theme with run_once installer
- Add waybar network on-click to launch impala

--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -121,7 +121,8 @@
         "format-disconnected": "󰖪 Disconnected",
         "tooltip-format-wifi": "{essid} ({signalStrength}%)\n{ifname}: {ipaddr}",
         "tooltip-format-ethernet": "{ifname}: {ipaddr}",
-        "format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"]
+        "format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"],
+        "on-click": "ghostty -e impala"
     },
 
     "pulseaudio": {
